# oMsg

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.server.yml  oMsg_step13_report_2026-03-11.md  oMsg_step7_report_2026-03-10.md  oMsg_step9_report_2026-03-10.md  pyproject.toml  rebrand_leftovers.txt
.github/workflows/: ci.yml  deploy-server.yml  release-build.yml
alembic/: env.py
alembic/versions/: 20260309_000001_initial_schema.py  20260309_000002_realtime_events.py  20260309_000003_optional_username.py  20260309_000004_media_privacy_settings.py  20260309_000005_scheduled_messages.py  20260310_000006_privacy_exceptions_send_when_online.py  20260310_000007_device_sessions.py  20260310_000008_message_idempotency.py  20260310_000009_media_upload_idempotency.py  20260310_000010_message_hidden_history.py
app/: __init__.py  main.py
app/api/: deps.py
app/core/: config.py  database.py  migrations.py  security.py
app/models/: chat.py  realtime.py  user.py
app/realtime/: __init__.py  fanout.py  manager.py
app/schemas/: auth.py  chat.py  user.py
app/services/: auth_service.py  chat_service.py  sms_service.py  (+3 more)
deploy/: github-secrets.md
docs/: client_architecture.md  github_actions_build.md  server_setup.md  telegram_rewrite_plan.md
omsg_app/: README.md  pubspec.yaml
releases/: manifest.json
scripts/: __init__.py  build_android.ps1  build_windows.ps1  create_release_tag.ps1  register_windows_protocol.ps1  seed_demo.py  update_manifest.py
tests/: conftest.py  test_api.py
web/: app.js  index.html  styles.css
(+71 files in other folders)
